--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-
-default: &default
+default: &defaults
   adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  encoding: utf8
   pool: 5
+  host:     <%= ENV["POSTGRES_HOST"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 development:
-  <<: *default
+  <<: *defaults
+  adapter: postgresql
+  database: streaming_dev
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+staging:
+  <<: *defaults
+  adapter: postgresql
+  database: streaming_stag
+
 test:
-  <<: *default
+  <<: *defaults
+  adapter: postgresql
+  database: streaming_test
 
 production:
-  <<: *default
+  <<: *defaults
+  adapter: postgresql
+  database: streaming_prod
