--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ gemfiles/*.lock
 .DS_Store
 .env
 log/*
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
